--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -42,6 +42,12 @@
   h3 {
     margin-top: 0;
   }
+  
+  img{
+    cursor: -moz-zoom-in; 
+    cursor: -webkit-zoom-in; 
+    cursor: zoom-in;
+  }
 
   li {
     small {
