--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -333,6 +333,12 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 4em;
 }
 
+.post .toEnlarge {
+  cursor: -moz-zoom-in;
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+}
+
 /* Blog post or page title */
 .page-title,
 .post-title,
@@ -427,10 +433,4 @@ a.pagination-item:hover {
     border-top-right-radius:    4px;
     border-bottom-right-radius: 4px;
   }
-}
-
-.toEnlarge {
-  cursor: -moz-zoom-in;
-  cursor: -webkit-zoom-in;
-  cursor: zoom-in;
 }
