--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -339,6 +339,22 @@ tbody tr:nth-child(odd) th {
   cursor: zoom-in;
 }
 
+.post .toShrink {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  overflow: auto;
+    
+  cursor: -moz-zoom-out; 
+  cursor: -webkit-zoom-out; 
+  cursor: zoom-out;
+}
+
 /* Blog post or page title */
 .page-title,
 .post-title,
