--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <script>
   function shrink(e) {
     //var enlarged = document.getElementById('enlarged');
-    e.parentNode.removeChild(e);
+    e.parentNode.parentNode.removeChild(e.parentNode);
   }
   function enlarge(e) {
     var cover = document.createElement('div');
