--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,27 @@
         }, false);
       })(document);
     </script>
+    <script>
+      function shrink(e) {
+        //var enlarged = document.getElementById('enlarged');
+        e.parentNode.parentNode.removeChild(e.parentNode);
+      }
+      function enlarge(e) {
+        var cover = document.createElement('div');
+        cover.id = 'enlarged';
+        cover.style.position = 'fixed';
+        cover.style.padding = '0';
+        cover.style.margin = '0';
+        cover.style.left = '0px';
+        cover.style.top = '0px';
+        cover.style.width = '100%';
+        cover.style.height = '100%';
+        cover.style.background = '#000';
+    
+        cover.innerHTML = '<img src="' + e.src + '" onclick="javascript:shrink(this)" class="toShrink">';
+        document.body.appendChild(cover);
+      }
+    </script>
     
   </body>
 </html>
