--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -349,6 +349,7 @@ tbody tr:nth-child(odd) th {
   max-height: 100%;
   margin: auto;
   overflow: auto;
+  opacity: 1;
     
   cursor: -moz-zoom-out; 
   cursor: -webkit-zoom-out; 
