--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
         cover.style.height = '100%';
         cover.style.background = '#000';
     
-        cover.innerHTML = '<img src="' + e.src + '" onclick="javascript:shrink(this)" class="toShrink(this.parentNode)">';
+        cover.innerHTML = '<img src="' + e.src + '" onclick="javascript:shrink(this.parentNode)" class="toShrink">';
         document.body.appendChild(cover);
       }
     </script>
