--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
         
         function img_load() {
           var p = cover.querySelector("#loading_img");
-          if(p ！= undefined) {
+          if(p != undefined) {
             p.parentNode.removeChild(p);
           }
         }
