--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,7 @@
         } else {
           var para = document.createElement("P");
           para.id = "loading_img";
+          para.setAttribute("style", "margin:0;position:absolute;top:50%;left:50%;margin-right:-50%;transform:translate(-50%, -50%);");
           var t = document.createTextNode("LOADING...");
           para.appendChild(t);
           cover.appendChild(para);
