--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -348,6 +348,7 @@ tbody tr:nth-child(odd) th {
   max-width: 100%;
   max-height: 100%;
   margin: auto;
+  border-radius: 0px;
   overflow: auto;
   opacity: 1;
     
