--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,24 +64,14 @@
         var cover = document.createElement('div');
         cover.id = 'enlarged';
         cover.setAttribute('style', 'position:fixed; padding:0; margin:0; left:0px; top:0px; width:100%; height:100%; background:#ccc;');
-        //cover.style.position = 'fixed';
-        //cover.style.padding = '0';
-        //cover.style.margin = '0';
-        //cover.style.left = '0px';
-        //cover.style.top = '0px';
-        //cover.style.width = '100%';
-        //cover.style.height = '100%';
-        //cover.style.background = '#ccc';
         cover.addEventListener("click", shrink);
-        cover.addEventListener("wheel", function(e){});
+        //cover.addEventListener("wheel", function(e){});
     
         cover.innerHTML = '<img src="' + e.src + '" onclick="javascript:shrink(this)" class="toShrink">';
         document.body.appendChild(cover);
         
         var img = cover.querySelector('img');
-        img.addEventListener("wheel", function(e) {
-          alert(e);
-        });
+        //img.addEventListener("wheel", function(e) {});
         
         function img_load() {
           var p = cover.querySelector("#loading_img");
