--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,11 @@
       })(document);
     </script>
     <script>
+      var imgs = document.body.querySelectorAll("img.toEnlarge");
+      var srcs = [];
+      for(var imgEle of imgs)
+        srcs.push(imgEle.src);
+    
       document.onkeydown = function(e) {
         if(!e) {
           e = event;
@@ -51,6 +56,34 @@
         
         if(e.keyCode == 27) {
           shrink(e);
+        }
+        else if(e.keyCode == 39 || e.keyCode == 40 || e.keyCode == 37 || e.keyCode == 38) {
+          var divCover = document.getElementById('enlarged');
+          if(divCover == undefined)
+            return;
+            
+          var imgCurrent = divCover.querySelector('.toShrink');
+          if(imgCurrent == undefined)
+            return;
+            
+          var src = imgCurrent.src;
+          var offset = srcs.indexOf(src);
+          
+          imgCurrent.parentNode.removeChild(imgCurrent);
+          
+          if(e.keyCode == 39 || e.keyCode == 40) {
+            if(offset == -1 || offset == srcs.length - 1) {
+              divCover.parentNode.removeChild(divCover);
+              return;
+            }
+            enlarge(imgs[offset+1]);
+          } else {
+            if(offset == -1 || offset == 0) {
+              divCover.parentNode.removeChild(divCover);
+              return;
+            }
+            enlarge(imgs[offset-1]);
+          }
         }
       }
       
