--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,8 +94,11 @@
         }
       }
       function enlarge(e) {
-        var cover = document.createElement('div');
-        cover.id = 'enlarged';
+        var cover = document.getElementById('enlarged');
+        if(cover == undefined) {
+          cover = document.createElement('div');
+          cover.id = 'enlarged';
+        }
         cover.setAttribute('style', 'z-index:1000; position:fixed; padding:0; margin:0; left:0px; top:0px; width:100%; height:100%; background:#ccc;');
         cover.addEventListener("click", shrink);
         //cover.addEventListener("wheel", function(e){});
