--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,7 @@
     </script>
     <script>
       var imgs = document.body.querySelectorAll("img.toEnlarge");
-      var srcs = [];
-      for(var imgEle of imgs)
-        srcs.push(imgEle.src);
+      var srcs = Array.from(imgs, function(e){return e.src;});
     
       document.onkeydown = function(e) {
         if(!e) {
@@ -63,23 +61,23 @@
             return;
             
           var imgCurrent = divCover.querySelector('.toShrink');
-          if(imgCurrent == undefined)
+          if(imgCurrent == undefined) {
+            shrink(imgCurrent);
             return;
-            
-          var src = imgCurrent.src;
-          var offset = srcs.indexOf(src);
-          
+          }
+
           imgCurrent.parentNode.removeChild(imgCurrent);
+          var offset = srcs.indexOf(imgCurrent.src);
           
           if(e.keyCode == 39 || e.keyCode == 40) {
             if(offset == -1 || offset == srcs.length - 1) {
-              divCover.parentNode.removeChild(divCover);
+              shrink(imgCurrent);
               return;
             }
             enlarge(imgs[offset+1]);
           } else {
             if(offset == -1 || offset == 0) {
-              divCover.parentNode.removeChild(divCover);
+              shrink(imgCurrent);
               return;
             }
             enlarge(imgs[offset-1]);
@@ -93,6 +91,7 @@
           enlarged.parentNode.removeChild(enlarged);
         }
       }
+      
       function enlarge(e) {
         var cover = document.getElementById('enlarged');
         if(cover == undefined) {
@@ -101,13 +100,11 @@
         }
         cover.setAttribute('style', 'z-index:1000; position:fixed; padding:0; margin:0; left:0px; top:0px; width:100%; height:100%; background:#ccc;');
         cover.addEventListener("click", shrink);
-        //cover.addEventListener("wheel", function(e){});
     
         cover.innerHTML = '<img src="' + e.src + '" onclick="javascript:shrink(this)" class="toShrink" style="z-index:1002" oncontextmenu="return false;">';
         document.body.appendChild(cover);
         
         var img = cover.querySelector('img');
-        //img.addEventListener("wheel", function(e) {});
         
         function img_load() {
           var p = cover.querySelector("#loading_img");
@@ -130,7 +127,7 @@
       }
     </script>
     <script>
-      /*
+      
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -138,7 +135,7 @@
 
       ga('create', 'UA-45571639-3', 'auto');
       ga('send', 'pageview');
-      */
+      
     </script>
   </body>
 </html>
