--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,6 +97,7 @@
         if(cover == undefined) {
           cover = document.createElement('div');
           cover.id = 'enlarged';
+          cover.className = 'loader';
         }
         cover.setAttribute('style', 'z-index:1000; position:fixed; padding:0; margin:0; left:0px; top:0px; width:100%; height:100%; background:#ccc;');
         cover.addEventListener("click", shrink);
