--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,10 @@
         cover.setAttribute('style', 'z-index:1000; position:fixed; padding:0; margin:0; left:0px; top:0px; width:100%; height:100%; background:#ccc;');
         cover.addEventListener("click", shrink);
     
-        cover.innerHTML = '<img src="' + e.src + '" onclick="javascript:shrink(this)" class="toShrink" style="z-index:1002" oncontextmenu="return false;">';
+        var imgurl = e.src;
+        if(e.hasAttribute('original'))
+          imgurl = e.original;
+        cover.innerHTML = '<img src="' + imgurl + '" onclick="javascript:shrink(this)" class="toShrink" style="z-index:1002" oncontextmenu="return false;">';
         document.body.appendChild(cover);
         
         var img = cover.querySelector('img');
