--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,5 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <script type="text/javascript" src="http://tajs.qq.com/stats?sId=60201747" charset="UTF-8"></script> 
 </head>
