--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,26 @@ html {
   -moz-text-size-adjust: 100%;
   box-sizing: border-box;
 }
+@media (min-resolution: 72dpi) {
+  body {
+    font-size: 8px!important;
+  }
+}
+@media (min-resolution: 96dpi) {
+  body {
+    font-size: 10px !important;
+  }
+}
+@media (min-resolution: 144dpi) {
+  body {
+    font-size: 16px !important;
+  }
+}
+@media (min-resolution: 192dpi) {
+  body {
+    font-size: 20px !important;
+  }
+}
 body {
   position: relative;
   font-family: 'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
