font size per resolution

--- a/css/style.less
+++ b/css/style.less
@@ -21,10 +21,10 @@ html {
     body {font-size: 12px!important}
 }
 @media (min-resolution: 1.5dppx) {
-    body {font-size: 16px!important}
+    body {font-size: 14px!important}
 }
 @media (-webkit-min-device-pixel-ratio:1.5) {
-    body {font-size: 16px!important}
+    body {font-size: 14px!important}
 }
 @media (min-resolution: 2ddpx) {
     body {font-size:18px!important}
@@ -32,11 +32,17 @@ html {
 @media (-webkit-min-device-pixel-ratio:2) {
     body {font-size: 18px!important}
 }
+@media (min-resolution: 2.5ddpx) {
+    body {font-size: 20px!important}
+}
+@media (-webkit-min-device-pixel-ratio:2.5) {
+    body {font-size: 20px!important}
+}
 @media (min-resolution: 3ddpx) {
-    body {font-size: 27px!important}
+    body {font-size: 24px!important}
 }
 @media (-webkit-min-device-pixel-ratio:3) {
-    body {font-size: 27px!important}
+    body {font-size: 24px!important}
 }
 
 body {
