--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ html {
 }
 @media (min-resolution: 1.5dppx) {
   body {
-    font-size: 16px !important;
+    font-size: 14px !important;
   }
 }
 @media (-webkit-min-device-pixel-ratio: 1.5) {
   body {
-    font-size: 16px !important;
+    font-size: 14px !important;
   }
 }
 @media (min-resolution: 2ddpx) {
@@ -39,14 +39,24 @@ html {
     font-size: 18px !important;
   }
 }
+@media (min-resolution: 2.5ddpx) {
+  body {
+    font-size: 20px !important;
+  }
+}
+@media (-webkit-min-device-pixel-ratio: 2.5) {
+  body {
+    font-size: 20px !important;
+  }
+}
 @media (min-resolution: 3ddpx) {
   body {
-    font-size: 27px !important;
+    font-size: 24px !important;
   }
 }
 @media (-webkit-min-device-pixel-ratio: 3) {
   body {
-    font-size: 27px !important;
+    font-size: 24px !important;
   }
 }
 body {
