--- a/css/style.css
+++ b/css/style.css
@@ -11,32 +11,32 @@ html {
 }
 @media (min-resolution: 1ddpx) {
   body {
-    font-size: 12px!important;
+    font-size: 8px!important;
   }
 }
 @media (-webkit-min-device-pixel-ratio: 1) {
   body {
-    font-size: 12px !important;
+    font-size: 8px !important;
   }
 }
 @media (min-resolution: 1.5dppx) {
   body {
-    font-size: 14px !important;
+    font-size: 12px !important;
   }
 }
 @media (-webkit-min-device-pixel-ratio: 1.5) {
   body {
-    font-size: 14px !important;
+    font-size: 12px !important;
   }
 }
 @media (min-resolution: 2ddpx) {
   body {
-    font-size: 18px !important;
+    font-size: 16px !important;
   }
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
   body {
-    font-size: 18px !important;
+    font-size: 16px !important;
   }
 }
 @media (min-resolution: 2.5ddpx) {
@@ -85,28 +85,29 @@ button {
   content: "\f015";
 }
 .site-meta {
-  padding: 2.5em 0;
+  padding: 2em 0;
   color: #fff;
   background: #8b5a00;
   background-image: linear-gradient(90deg, #1488cc 0%, #2b32b2 100%);
   margin: 0;
   text-align: center;
+  white-space: nowrap;
 }
 .site-meta .site-title {
   position: relative;
   display: inline-block;
   vertical-align: top;
-  line-height: 2.25em;
+  line-height: 2em;
   font-size: 1.25em;
   font-weight: normal;
   color: #fff;
 }
 .site-meta .site-subtitle {
   position: relative;
-  margin: 0.625em 0.625em 0;
   font-weight: initial;
   font-size: 0.8125em;
   color: #fff;
+  padding: 0;
 }
 .site-nav-toggle {
   display: block;
@@ -174,7 +175,7 @@ button {
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   transition-delay: 0s;
-  font-size: 13px;
+  font-size: 1em;
   display: block;
 }
 .sidebar-position-left .header .header-inner .site-nav .menu .menu-item a:hover {
